# advent-of-code

./: .gitignore  Cargo.toml  README.md
rust/aoc-2020/: Cargo.toml
rust/aoc-2020/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  main.rs
rust/aoc-2021/: Cargo.toml
rust/aoc-2021/src/: day_01.rs  day_02.rs  day_03.rs  main.rs
rust/aoc-2023/: Cargo.toml
rust/aoc-2023/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  main.rs
src/: day_01.rs  day_02.rs  main.rs
src/test/: day_01.rs
