[package]
name = "aoc-2020"
version = "0.1.0"
authors = ["Francesco Giordana <fgiordana@netflix.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
itertools = "0.10"
flexi_logger = "0.20"
log = "0.4"
